--- a/index.html
+++ b/index.html
@@ -39,30 +39,30 @@
                 left: 10px;
              }
              #sun, #star1, #star2, #star3 {
-                background-color: yellow;
-                color: yellow;
+                background-color: gold;
+                color: white;
                 position: relative;
                 border-radius: 50%;
              }
              #star1, #star2, #star3 {
-                font-size: .5rem;
+                font-size: .8rem;
             }       
              #sun{                                
                 top: -100px;
-                font-size: 1rem;
+                font-size: 1.5rem;
                 left: 40px;
              }
              #star1 {
                 top: -175px;
-                left: -30px;
+                left: -20px;
              }
              #star2 {
-                top: -102px;
-                left: 65px;
+                top: -108px;
+                left: 75px;
              }
              #star3 {
-                top: -28px;
-                left: -65px;
+                top: -40px;
+                left: -50px;
              }
              p {
                 margin: 0;
@@ -84,10 +84,10 @@
                 </div>
             </div>
         </div>
-        <span id="sun">SuN</span>
-        <span id="star1">Star</span>
-        <span id="star2">Star</span>
-        <span id="star3">Star</span>
+        <span id="sun">☼</span>
+        <span id="star1">★</span>
+        <span id="star2">★</span>
+        <span id="star3">★</span>
        
     </body>
 </html>
